removed overflow from list; fixed responsive navbar title

--- a/src/app/list-available-events/list-available-events.component.css
+++ b/src/app/list-available-events/list-available-events.component.css
@@ -13,7 +13,9 @@ mat-card{
   margin-top: 1em;
   margin-bottom: 1em;
 } 
-
+mat-grid-list {
+  overflow: hidden;
+}
 .SelectedEvents{
   background-color: cadetblue;
 }
